<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Alarm_setting_location_picker"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <RadioGroup
            android:id="@+id/LocationPickBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/PickFromName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ASL_PickFromName" />

            <RadioButton
                android:id="@+id/PickFromMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ASL_PickFromMap" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LocationInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LocationInputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ASL_PickInputHint"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/Within"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ASL_radTextView"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Rad_InputTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ASL_radInputHint"
                    android:inputType="number|numberDecimal"
                    android:text="@string/ASL_radInputText" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/LocationList"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_weight="1" />

        <org.osmdroid.views.MapView
            android:id="@+id/LP_mapView"
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:layout_weight="1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Location_Enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue2"
            android:text="@string/Alarm_setting_Enter"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>