<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Activity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/dark4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alarm_setting_Title"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <RadioGroup
            android:id="@+id/Time_or_Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/is_TimeAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif"
                android:text="@string/Alarm_setting_time"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/is_LocationAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Alarm_setting_location"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/TimePickers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Time_Picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark2"
                android:text="@string/Alarm_setting_time_picker"
                android:textColor="@color/blue1"
                android:textSize="16sp"
                app:icon="@android:drawable/ic_menu_recent_history"
                app:iconTint="@color/blue1" />

            <TextView
                android:id="@+id/PickedTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Alarm_setting_defaultTime"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LocationPickers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Location_Picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark2"
                    android:text="@string/Alarm_setting_location_picker"
                    android:textColor="@color/blue1"
                    android:textSize="16sp"
                    app:icon="@android:drawable/ic_dialog_map"
                    app:iconTint="@color/blue1" />

                <TextView
                    android:id="@+id/PickedLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="clip_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/StayMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/MINUTE"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:hint="@string/Alarm_setting_inputHint"
                        android:inputType="number|numberDecimal"
                        android:text="5"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/StayingFor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/Location_StayFor"
                    android:minHeight="50dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/is_Sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:text="@string/Alarm_setting_sound"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:buttonIconTint="@color/black" />

                <CheckBox
                    android:id="@+id/is_Popup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/Alarm_setting_PopUp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:buttonIconTint="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/is_Vibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/Alarm_setting_vibration"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:buttonIconTint="@color/black" />

                <CheckBox
                    android:id="@+id/is_Event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Alarm_setting_Event"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:buttonIconTint="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ListView
                android:id="@+id/Event_List"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:cacheColorHint="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/selected_Event"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:entries="@array/Event_list"
                    android:foregroundTint="@color/black"
                    android:spinnerMode="dropdown" />

                <Button
                    android:id="@+id/Event_add"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/dark2"
                    android:text="@string/Alarm_setting_EventAdd"
                    android:textColor="@color/blue1"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/WaitSecond"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="50dp"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SECOND"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dark1"
                    android:hint="@string/Alarm_setting_inputHint"
                    android:hyphenationFrequency="normal"
                    android:inputType="number"
                    android:text="5"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/WaitingFor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/Alarm_WaitingFor"
                android:foregroundTint="#000000"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/is_recycle"
            style="@style/SwitchCompat"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:checked="false"
            android:text="@string/Alarm_setting_Recycle"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Enter"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue2"
                android:text="@string/Alarm_setting_Enter"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:strokeColor="#000000" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/Alarm_setting_Cancel"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>